[gd_scene load_steps=2 format=3 uid="uid://bx7k3nnaqp2vt"]

[ext_resource type="Script" path="res://scripts/game/ui/survivor_action_menu.gd" id="1"]

[node name="SurvivorActionMenu" type="Control"]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
theme_override_constants/separation = 4

[node name="MoveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 30)
text = "Move"

[node name="AttackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 30)
text = "Attack"

[node name="EndTurnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 30)
text = "End Turn"
